k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1-deployment
  labels:
    app: project1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: project1
  template:
    metadata:
      labels:
        app: project1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/"
    spec:
      containers:
      - name: project1container
        image: digdigdigdig/devops-project1:c5f59c94548bb4f3af5879853d761e54dfcded4f
        ports:
        - containerPort: 80
        
        # --- ADD THESE GUARDRAILS ---
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
