k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project1-service
spec:
  type: NodePort
  selector:
    app: project1
  ports:
    - port: 80
      nodePort: 30888
