k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project1-host-ingress
spec:
  rules:
  - host: "lewishamilton.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: project1-service
            port:
              number: 80
